Fixed Bugs & Reverted to native scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
   --theme-bg-color: #2D3342;
 }
 
-body::-webkit-scrollbar {
+/* Custom Scrollbar */
+/* body::-webkit-scrollbar {
   width: 11px
 }
 
@@ -18,7 +19,7 @@ body::-webkit-scrollbar-thumb {
   background-color: #999;
   border-radius: 6px;
   border: 3px solid #fff
-}
+} */
 
 body {
   background-color: var(--body-bg-color);
